src/test/ui/error-codes/E0454.stderr
error[E0454]: #[link(name = "")] given with empty name
  --> $DIR/E0454.rs:11:1
   |
LL | #[link(name = "")] extern {}
   | ^^^^^^^^^^^^^^^^^^ empty name given

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0454"
